experimental/ir/testdata/syntax/2024.proto.stderr.txt
error: sorry, Edition 2024 is not fully implemented
  --> testdata/syntax/2024.proto:15:11
   |
15 | edition = "2024";
   |           ^^^^^^
   = help: Edition 2024 will be implemented in a future release

encountered 1 error
